# linear-regression

./: CMakeLists.txt  Data.csv.txt  README.md  main.cpp
Data/include/: Analysis.h  Data.h
Data/src/: Analysis.cpp  Data.cpp  Data.csv  DataTest.cpp  Scaling.cpp
Datasets/: 3Dataset.csv  AIDS_Classification_15000.csv  AIDS_Classification_50000.csv  Advertising.csv  Cannabis_retailPrice.csv  Data.csv  Qty.csv  SAT.csv  Salary_Data.csv  rainfall.csv  salaries.csv
Saad/: Code.cpp  Data.csv  Data.h  tempCodeRunnerFile.cpp
regression-analysis/include/: HyperParameterOptimization.h  Interface.h  optimization.h  regression.h
regression-analysis/src/: GridSearch.cpp  RandomSearch.cpp  regression.cpp  save.cpp
